--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,8 +24,8 @@ main:
   # - title: "Blog Posts"
   #   url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+  # - title: "CV"
+  #   url: /cv/
 
   - title: "About"
     url: /aboutme/
